<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".SunnyMenuFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:contentDescription="@string/sunny_logo"
        android:src="@drawable/logo_sunny"
        android:scaleType="centerInside"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/nav_menu_to_about_button"
            style="@style/MenuButtonStyle"
            android:text="@string/menu_about_sunny" />

        <Button
            android:id="@+id/nav_menu_to_gallery_button"
            style="@style/MenuButtonStyle"
            android:text="@string/menu_sunny_gallery" />

        <Button
            android:id="@+id/nav_menu_to_predictions_button"
            style="@style/MenuButtonStyle"
            android:text="@string/menu_sunny_predictions" />

        <Button
            android:id="@+id/nav_menu_to_meme_button"
            style="@style/MenuButtonStyle"
            android:text="@string/menu_sunny_meme" />

        <Button
            android:id="@+id/nav_menu_to_dressup_button"
            style="@style/MenuButtonStyle"
            android:text="@string/menu_sunny_dressup" />
    </LinearLayout>
</LinearLayout>